Create Main Player Canvas

--- a/tralixer/index.html
+++ b/tralixer/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
+<canvas id="canvas1"></canvas>
+
+
+
 <script src="asserts/js/jquery-3.6.1.min.js"></script>
 <script src="asserts/js/currentJs.js"></script>
 
