--- a/tralixer/index.html
+++ b/tralixer/index.html
@@ -12,6 +12,11 @@
 
 <canvas id="canvas1"></canvas>
 
+<img id="layer1" src="asserts/Images/layer1.png" alt="">
+<img id="layer1" src="asserts/Images/layer2.png" alt="">
+<img id="layer1" src="asserts/Images/layer3.png" alt="">
+<img id="layer1" src="asserts/Images/layer4.png" alt="">
+
 
 
 <script src="asserts/js/jquery-3.6.1.min.js"></script>
