--- a/tralixer/index.html
+++ b/tralixer/index.html
@@ -12,10 +12,10 @@
 
 <canvas id="canvas1"></canvas>
 
-<img id="layer1" src="asserts/Images/layer1.png" alt="">
-<img id="layer2" src="asserts/Images/layer2.png" alt="">
-<img id="layer3" src="asserts/Images/layer3.png" alt="">
-<img id="layer4" src="asserts/Images/layer4.png" alt="">
+<img id="layer1" src="asserts/Images/layer1.png" style="width: 1000px;height: 1748px" alt="">
+<img id="layer2" src="asserts/Images/layer2.png" style="width: 1000px;height: 1748px" alt="">
+<img id="layer3" src="asserts/Images/layer3.png"  style="width: 1000px;height: 1748px" alt="">
+<img id="layer4" src="asserts/Images/layer4.png" style="width: 1000px;height: 1748px" alt="">
 
 
 
