Added Day light and Night Light

--- a/tralixer/index.html
+++ b/tralixer/index.html
@@ -16,6 +16,8 @@
 <img id="layer2" src="asserts/Images/layer2.png" style="width: 1000px;height: 1748px" alt="">
 <img id="layer3" src="asserts/Images/layer3.png"  style="width: 1000px;height: 1748px" alt="">
 <img id="layer4" src="asserts/Images/layer4.png" style="width: 1000px;height: 1748px" alt="">
+<img id="layer5" src="asserts/Images/layer5.jpg" style="width: 1000px;height: 1748px" alt="">
+<img id="layer6" src="asserts/Images/layer6.jpg" style="width: 1000px;height: 1748px" alt="">
 
 
 
