Remove Player background and fixed Bugs

--- a/tralixer/index.html
+++ b/tralixer/index.html
@@ -20,6 +20,13 @@
 <img id="layer6" src="asserts/Images/layer6.jpg" style="width: 1000px;height: 1748px" alt="">
 
 <img id="player" src="asserts/Images/Plane/Fly%20(1).png" alt="">
+<img id="player2" src="asserts/Images/Plane/Fly%20(2).png" alt="">
+
+<img id="pShoot1" src="asserts/Images/Plane/Shoot%20(1).png" alt="">
+<img id="pShoot2" src="asserts/Images/Plane/Shoot%20(2).png" alt="">
+<img id="pShoot3" src="asserts/Images/Plane/Shoot%20(3).png" alt="">
+<img id="pShoot4" src="asserts/Images/Plane/Shoot%20(4).png" alt="">
+<img id="pShoot5" src="asserts/Images/Plane/Shoot%20(5).png" alt="">
 
 
 
