--- a/tralixer/index.html
+++ b/tralixer/index.html
@@ -12,10 +12,6 @@
 
 <canvas id="canvas1"></canvas>
 
-<!--<img id="layer1" src="asserts/Images/layer1.png" style="width: 1000px;height: 1748px" alt="">-->
-<!--<img id="layer2" src="asserts/Images/layer2.png" style="width: 1000px;height: 1748px" alt="">-->
-<!--<img id="layer3" src="asserts/Images/layer3.png"  style="width: 1000px;height: 1748px" alt="">-->
-<!--<img id="layer4" src="asserts/Images/layer4.png" style="width: 1000px;height: 1748px" alt="">-->
 <img id="layer5" src="asserts/Images/layer5.jpg" style="width: 1000px;height: 1748px" alt="">
 <img id="layer6" src="asserts/Images/layer6.jpg" style="width: 1000px;height: 1748px" alt="">
 
@@ -27,6 +23,16 @@
 <img id="pShoot3" src="asserts/Images/Plane/Shoot%20(3).png" alt="">
 <img id="pShoot4" src="asserts/Images/Plane/Shoot%20(4).png" alt="">
 <img id="pShoot5" src="asserts/Images/Plane/Shoot%20(5).png" alt="">
+
+<!--vehicle-->
+<img id="enemyV11" src="asserts/Images/vehicle%201/frames/vehicle-1.png" alt="">
+
+
+<img id="enemyV21" src="asserts/Images/vehicle%202/frames/vehicle-2-1.png" alt="">
+
+
+<img id="enemyV31" src="asserts/Images/vehicle%203/frames/vehicle-3.png" alt="">
+
 
 
 
