--- a/tralixer/index.html
+++ b/tralixer/index.html
@@ -26,14 +26,18 @@
 
 <!--vehicle-->
 <img id="enemyV11" src="asserts/Images/vehicle%201/frames/vehicle-1.png" alt="">
+<img id="enemyV12" src="asserts/Images/vehicle%201/frames/vehicle-2.png" alt="">
+<img id="enemyV13" src="asserts/Images/vehicle%201/frames/vehicle-3.png" alt="">
 
 
 <img id="enemyV21" src="asserts/Images/vehicle%202/frames/vehicle-2-1.png" alt="">
+<img id="enemyV22" src="asserts/Images/vehicle%202/frames/vehicle-2-2.png" alt="">
+<img id="enemyV23" src="asserts/Images/vehicle%202/frames/vehicle-2-3.png" alt="">
 
 
 <img id="enemyV31" src="asserts/Images/vehicle%203/frames/vehicle-3.png" alt="">
-
-
+<img id="enemyV32" src="asserts/Images/vehicle%203/frames/vehicle-4.png" alt="">
+<img id="enemyV33" src="asserts/Images/vehicle%203/frames/vehicle-5.png" alt="">
 
 
 <script src="asserts/js/jquery-3.6.1.min.js"></script>
