Bullet Image Added

--- a/tralixer/index.html
+++ b/tralixer/index.html
@@ -39,6 +39,11 @@
 <img id="enemyV32" src="asserts/Images/vehicle%203/frames/vehicle-4.png" alt="">
 <img id="enemyV33" src="asserts/Images/vehicle%203/frames/vehicle-5.png" alt="">
 
+<img id="smokeEx" src="asserts/Images/smokeExplosion.png" alt="">
+<img id="fireEx" src="asserts/Images/fireExplosion.png" alt="">
+
+<img id="laser" src="asserts/Images/projectile.png" alt="">
+
 
 <script src="asserts/js/jquery-3.6.1.min.js"></script>
 <script src="asserts/js/currentJs.js"></script>
